# RevivalSide

./: .env.example  .gitignore  README.md  cs-listener.js  package-lock.json  package.json
combat-handler/: csharpHost.js  csharpHostWorker.js  index.js  syncBuilder.js
combat-host/: CombatEngine.cs  ManagedCombatBridge.cs  ManagedLuaFileLoader.cs  Protocol.cs  README.md  StateModels.cs
docs/: download-service.md  import-save-mission-fix.md  setup.md
download-service/: README.md
kmp/: .gitignore  README.md  build-android-listener-assets.ps1  install-counterside-xapk.ps1  settings.gradle.kts  vendor-nodejs-mobile.ps1
kmp/app/: CMakeLists.txt  build.gradle.kts
kmp/app/src/main/: AndroidManifest.xml
kmp/app/src/main/cpp/: dotnet-host.cpp  native-lib.cpp
kmp/app/src/main/java/dev/revivalside/capture/android/: NodeMobileBridge.java
kmp/app/src/main/kotlin/dev/revivalside/capture/android/: CaptureRepository.kt  CounterSideVpnService.kt  MainActivity.kt  RevivalSideListenerService.kt  RevivalSideSettings.kt
packet-handlers/: 0204-join-lobby-req.js  0213-reconnect-req.js  0216-contents-version-req.js  0231-steam-login-req.js  0600-heart-bit-req.js  0606-ui-scene-changed-req.js  0613-account-leave-state-req.js  0801-game-load-req.js  0807-game-load-complete-req.js  0823-game-giveup-req.js  1202-cutscene-dungeon-clear-req.js
server/: listener.js  userManager.js
server-data/: README.md
stages/: episode1Stage.js  mainStoryStage.js
tools/: build-prepackaged-gameplay-jsons.js  build-revivalside-wiki.js  cs_build_server_data.py  cs_extract_decrypted_assets.py  (+15 more)
(+50 files in other folders)
